Add cake pops href in index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>odin-recipes</h1>
-    <a href="./recipes/baked-kale-chips.html">baked-kale-chips</a>
+    <ol>
+
+    <li><a href="./recipes/baked-kale-chips.html">baked-kale-chips</a></li>
+    <li><a href="./recipes/easy-cake-pops.html">easy-cake-pops</a></li>
+    </ol>
+    
 </body>
 </html>
